--- a/.cproject
+++ b/.cproject
@@ -82,11 +82,8 @@
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings">
 				<externalSettings containerId="TouchControlOverlay;" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier">
 					<externalSetting>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/emulate"/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/TouchControlOverlay"/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/emulate/Device-Debug"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/TouchControlOverlay/public"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/TouchControlOverlay/Device-Debug"/>
-						<entry flags="RESOLVED" kind="libraryFile" name="emulate"/>
 						<entry flags="RESOLVED" kind="libraryFile" name="TouchControlOverlay"/>
 					</externalSetting>
 				</externalSettings>
@@ -131,8 +128,7 @@
 							</tool>
 							<tool id="com.qnx.qcc.tool.assembler.650445297" name="QCC Assembler" superClass="com.qnx.qcc.tool.assembler">
 								<option id="com.qnx.qcc.option.assembler.includePath.2039464355" name="Include Directories (-I)" superClass="com.qnx.qcc.option.assembler.includePath" valueType="includePath">
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/emulate}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/TouchControlOverlay}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/TouchControlOverlay/public}&quot;"/>
 								</option>
 								<inputType id="com.qnx.qcc.inputType.assembler.55159078" superClass="com.qnx.qcc.inputType.assembler"/>
 							</tool>
@@ -170,11 +166,8 @@
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings">
 				<externalSettings containerId="TouchControlOverlay;" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier">
 					<externalSetting>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/emulate"/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/TouchControlOverlay"/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/emulate/Device-Debug"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/TouchControlOverlay/public"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/TouchControlOverlay/Device-Debug"/>
-						<entry flags="RESOLVED" kind="libraryFile" name="emulate"/>
 						<entry flags="RESOLVED" kind="libraryFile" name="TouchControlOverlay"/>
 					</externalSetting>
 				</externalSettings>
