--- a/.project
+++ b/.project
@@ -67,5 +67,6 @@
 	<natures>
 		<nature>org.eclipse.cdt.core.cnature</nature>
 		<nature>com.qnx.tools.ide.qde.core.qnxnature</nature>
+		<nature>com.qnx.tools.ide.bbt.core.bbtnature</nature>
 	</natures>
 </projectDescription>
